<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.cz.firstapllicatonnanodegree.Activites.MoviesDetailsActivity">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="#009688">

                <TextView
                    android:id="@+id/tv_movie_title_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="@string/movie_name"
                    android:textColor="#ffffff"
                    android:textSize="26dp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:layout_margin="20dp"
                    android:src="@mipmap/ic_launcher" />

                <RelativeLayout
                    android:id="@+id/rv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/iv_poster"
                    android:layout_toRightOf="@id/iv_poster">

                    <TextView
                        android:id="@+id/tv_rlase_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/relase_date"
                        android:textColor="#454545"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/tv_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_rlase_date"
                        android:layout_marginTop="5dp"
                        android:text="@string/average_vote"
                        android:textColor="#454545"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btn_add_to_favourit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_vote_average"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/btn_add_to_fav"
                        android:lines="2"
                        android:maxLines="2"
                        android:padding="5dp"
                        android:text="@string/add_to_fav" />
                </RelativeLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSs"
                android:textColor="#454545" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="#454545" />

            <TextView
                android:id="@+id/tv_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trailers"
                android:textColor="#454545"
                android:textSize="24sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="95dp"
                android:padding="4dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="#454545" />

            <TextView
                android:id="@+id/tv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reviews"
                android:textColor="#454545"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/linear_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <TextView
                        android:id="@+id/tv_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:src="@drawable/btn_add_to_fav"
                        android:text="@string/author"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tv_content"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:text="@string/content"
                        android:textSize="20sp" />
                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="4dp">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
